--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 ignore = E265,E501
 max-line-length = 100
 max-complexity = 10
-exclude = pinax/<app>/migrations/*
+exclude = pinax/testimonials/migrations/*
 inline-quotes = double
 
 [isort]
@@ -10,16 +10,16 @@ multi_line_output=3
 known_django=django
 known_third_party=pinax
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-skip_glob=*/pinax/<app>/migrations/*
+skip_glob=*/pinax/testimonials/migrations/*
 
 [coverage:run]
 source = pinax
-omit = pinax/<app>/conf.py,pinax/<app>/tests/*,pinax/<app>/migrations/*
+omit = pinax/testimonials/conf.py,pinax/testimonials/tests/*,pinax/testimonials/migrations/*
 branch = true
 data_file = .coverage
 
 [coverage:report]
-omit = pinax/<app>/conf.py,pinax/<app>/tests/*,pinax/<app>/migrations/*
+omit = pinax/testimonials/conf.py,pinax/testimonials/tests/*,pinax/testimonials/migrations/*
 exclude_lines =
     coverage: omit
 show_missing = True
